--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 manuscript/coverletter*
 manuscript/letterbib*
 manuscript/Review_Stopping.pdf
+manuscript/Response*
 results/results_fr.csv
 *.bst
 *.pyc
