--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+manuscript/response*
 manuscript/coverletter*
 manuscript/letterbib*
-manuscript/Review_Stopping.pdf
+manuscript/Review_Stopping*
 manuscript/Response*
 results/results_fr.csv
 *.bst
